# thermite

./: .gitignore  Cargo.toml  Makefile
isofiles/boot/grub/: grub.cfg
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_start.asm
src/isofiles/boot/grub/: grub.cfg
src/memory/: area_frame_allocator.rs  memory.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  paging.rs  table.rs  temporary_page.rs
