[package]
name = "thermite"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.5"
spin = "0.3.5"

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

[dependencies.bitflags]
version = "0.4.0"
features = ["no_std"]

[dependencies.x86]
version = "0.6.0"
default-features = false