[package]
name = "thermite"
version = "0.1.0"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
spin = "0.4.5"

[dependencies.multiboot2]
version = "0.3.1"

[dependencies.bitflags]
version = "0.4.0"
features = ["no_std"]

[dependencies.x86]
version = "0.8.0"
default-features = false